--- a/aula 01/botoes.html
+++ b/aula 01/botoes.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
-    <button>subscribe</button>
+    <button class="youtube">subscribe</button>
+
+    <button class="join">join</button>
 </body>
 </html>
